# TTI-LAB

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_markov_demo.py  setup.py  tti_lab_config.json
core/: __init__.py  _init_.py  fields.py  information.py  operators.py  probability.py
docs/: 00_overview.md
env/: environment.yml
math/: __init__.py  tensors.py
notebooks/: 00_setup_env.ipynb
simulations/: __init__.py  dynamics.py
src/tti/: __init__.py
src/tti/models/: __init__.py  cellular_automata.py
tests/: conftest.py  test_fields_and_dynamics.py  test_information.py  test_probability.py
visualizations/: __init__.py  plots.py
